[css-typed-om] CSSUrlImageValue should set attributes to null if there was an error

As per spec[1], intrinsicWidth, intrinsicHeight, and intrinsicRatio should
return NULL , if state is other than "loaded".

[1] https://drafts.css-houdini.org/css-typed-om-1/#cssimagevalue

Bug: 792328
Change-Id: I9d3c7014136f6f2a7bd6b350ff4083389436cc54
Reviewed-on: https://chromium-review.googlesource.com/810288
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: Shanmuga Pandi <shanmuga.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#522346}
Former-commit-id: 35cea0d40d8d99a12955d83449fb79a7c5680fe1